--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,16 +1,16 @@
-name: [Snap Name] # you probably want to 'snapcraft register <name>'
+name: galaxy-escape # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
 version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
-title: [Game Name]
-summary: [Short Summary]
-description: [Description]
+title: Galaxy Escape Saga
+summary: Survive in the depths of space.
+description: Traverse unknown galaxies, manage your crew, and survive perils beyond imagination.
 
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
 apps:
-  [Snap Name]:
-    command: bin/[Snap Name]-bin
+  galaxy-escape:
+    command: bin/galaxy-escape-bin
     extensions: [gnome]
     plugs:
       - network
@@ -22,8 +22,8 @@ layout:
     bind: $SNAP/gnome-platform/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/webkit2gtk-4.0
 
 parts:
-  [Snap Name]:
+  galaxy-escape:
     plugin: dump
     source: .
     organize:
-      [Snap Name]-bin: bin/
+      galaxy-escape-bin: bin/
